# fibery-client

./: .example.env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  devenv.nix  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/fibery/: __init__.py  builders.py  client_interface.py  config.py  entity_model.py  fibery_formats.py  fibery_models.py  fibery_service.py  httpx_client.py  utils.py
tests/: conftest.py  test_file_upload.py  test_service.py
